# jaz_api_v02

./: Dockerfile  Dockerfile.prod  EAV Reference from ChatGPT  Entity Attribute Value Model. Today, we are going to talk about a… _ by Swapnil agrawal _ Medium.mhtml  README.md  Troubleshoot Sqlalchemy.txt  alembic.ini  backup.7z  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject copy.toml.bkp  pyproject for ormar etc.toml.bkp  pyproject.toml  useful_commands.txt  useful_commands2.txt
app/: config.py  config.py.bkp  crud.py  db.py  db.py.bkp  main.py  models.py  schemas.py
app/auth/: models.py  routes.py  schemas.py  service.py
app/songs_app/: models.py  routes.py  schemas.py  service.py
app/template/: models.py  router.py  service.py
migrations/: env.py
migrations/versions/: 1b15a66d56a8_add_auth.py  27a37b21069c_add_year.py  568937018d50_add_auth2.py  fc92bd2caeda_init.py
