[tool.poetry]
name = "jaz-api-v0-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jaz_api_v0"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.0"}
asyncpg = "^0.28.0"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
